[package]
name = "junbitsu"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.0"
license = "MIT"
authors = ["pleme-io"]
repository = "https://github.com/pleme-io/junbitsu"
homepage = "https://github.com/pleme-io/junbitsu"
description = "Zero-touch device provisioning"

[[bin]]
name = "junbitsu"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[lints.clippy]
pedantic = "warn"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
